pain... fixed footer issue not showing related to the *bottom* css property should work now

--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,33 @@
 /* Slot machine css file*/
 
 body {
-  background-color: pink;
+    background-color: pink;
 }
 
 h1 {
-  text-align: center;
+    text-align: center;
 }
 
 #slot-machine {
-  border: 1px solid black;
+    border: 1px solid black;
 }
 
 #play-button {
-  background-color: white;
-  border: none;
-  color: white;
-  text-align: center;
-  color: black;
-  text-decoration: none;
-  display: inline-block;
-  margin: 4px 2px;
-  border-radius: 12px;
+    background-color: white;
+    border: none;
+    color: white;
+    text-align: center;
+    color: black;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    border-radius: 12px;
 }
 
 footer {
-  position: fixed;
-  padding: 10px 10px 0px 10px;
-  bottom: 0;
-  width: 100%;
-  height: 15px;
-  text-align: center;
+    position: fixed;
+    padding: 10px;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
 }
